# API

./: AdminPanel.jsx.txt  ApiKeyManager.hpp  CMakeLists-3.txt  CMakeLists.txt  README.md  admin_router-1.hpp  admin_router.hpp  api_key_manager.hpp  asm_utils.asm  asm_utils.hpp  chat.cpp  chatbot_engine.cpp  chatbot_engine.hpp  conversation_manager.cpp  conversation_manager.hpp  demo-1.cpp  gamification.hpp  gemini_client.cpp  gemini_client.hpp  geolocation.hpp  idatabase-3.hpp  idatabase.hpp  intent_classifier.hpp  main-2.cpp  main.cpp  neural_network.cpp  notification_scheduler.hpp  print  print_compat.hpp  rate_limiter.hpp  response_cache-1.hpp  response_cache.hpp  run_server_patch.cpp  sentiment_analyzer.hpp  sqlite_database.hpp  thread_pool.hpp  whatsapp_client.hpp
